--- a/ProjetMVC/bin/ProjetMVC.dll.config
+++ b/ProjetMVC/bin/ProjetMVC.dll.config
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="WeaponContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WeaponContext-20211229113635; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WeaponContext-20211229113635.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="WeaponContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WeaponContext-20211229113635; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WeaponContext-20211229113635.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
