--- a/ProjetMVC/ProjetMVC.csproj
+++ b/ProjetMVC/ProjetMVC.csproj
@@ -172,7 +172,6 @@
     <Content Include="Views\Users\Delete.cshtml" />
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
-    <Content Include="Views\Default\Index.cshtml" />
     <Content Include="Views\Ammoes\Index.cshtml" />
     <Content Include="Views\Ammoes\Details.cshtml" />
     <Content Include="Views\Ammoes\Edit.cshtml" />
@@ -190,6 +189,7 @@
     <Content Include="Views\Certificats\Edit.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\ButtonHome.cshtml" />
+    <Content Include="Views\Shared\_EssaiLayout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
