--- a/ProjetMVC/ProjetMVC.csproj
+++ b/ProjetMVC/ProjetMVC.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Classe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\UsersAmeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -193,6 +194,7 @@
     <Content Include="Views\Users\OrderbyName.cshtml" />
     <Content Include="Views\Home\Location.cshtml" />
     <Content Include="Views\Shared\View.cshtml" />
+    <Content Include="Views\Users\Arme.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
