--- a/ProjetMVC/ProjetMVC.csproj
+++ b/ProjetMVC/ProjetMVC.csproj
@@ -195,6 +195,8 @@
     <Content Include="Views\Home\Location.cshtml" />
     <Content Include="Views\Shared\View.cshtml" />
     <Content Include="Views\Users\Arme.cshtml" />
+    <Content Include="Views\Home\Dictionnaire1.cshtml" />
+    <Content Include="Views\Users\Dictionnaire1.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
